# TerrainSynthesisGPU

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  CMakeLists.txt~  Makefile  Makefile_cpu  Makefile_gpu  Makefile~  README.md  cutil_math_bugfixes.h~  dialog_box.cpp  dialog_box.h  dtts_2dmorph.cpp  dtts_image.cu~  dtts_image.incl~  dtts_main .cpp  dtts_main.cpp  dtts_main.cpp~  dtts_main_gui.cpp~  dtts_match.cpp~  dtts_match.cu  dtts_match.cu~  dtts_match.incl~  dtts_match_bef_withbigtex.cu  dtts_merging.cpp~  dtts_merging.cu  dtts_merging.cu~  dtts_merging.h  dtts_merging.h~  dtts_merging.incl~  dtts_mst.h  dtts_patchsynthesis.cpp~  dtts_patchsynthesis.cu  dtts_patchsynthesis.cu~  dtts_patchsynthesis.incl~  dtts_ppa.cpp  dtts_wavelet.cpp  dtts_wavelet.h  headers.h  notes_tochangeinCPU.txt  (+7 more)
data/: uct_vals.ter
src/: CMakeLists.txt  CMakeLists.txt~  application.qrc~  cutil_math_bugfixes.h  dtts_2dmorph.h  dtts_graphcut.h  dtts_image.cpp  dtts_image.cu  dtts_image.h  dtts_image.incl  dtts_main.cpp  dtts_main.cpp~  dtts_main_gui.cpp  dtts_main_gui.cpp~  dtts_mainwindow.cpp  dtts_mainwindow.h  dtts_match.cpp  dtts_match.cu  dtts_match.h  dtts_match.incl  dtts_merging.cpp  dtts_merging.cu  dtts_merging.h  dtts_merging.incl  dtts_patchsynthesis.cpp  dtts_patchsynthesis.cu  dtts_patchsynthesis.h  dtts_patchsynthesis.incl  dtts_poisson.h  dtts_ppa.h
src/gui/: mainwindow.ui  synthesis_dialog.ui  terrain_synthesis_ui.qml  terrain_synthesis_ui.qmlproject
